Removing url and adding cause REST api response (#123638)
(cherry picked from commit 4dcc81f0c4acc0b047145292931abb7f3da9a85d)

# Conflicts:
#	x-pack/plugin/inference/src/main/java/org/elasticsearch/xpack/inference/external/action/voyageai/VoyageAIActionCreator.java
#	x-pack/plugin/inference/src/test/java/org/elasticsearch/xpack/inference/external/action/voyageai/VoyageAIEmbeddingsActionTests.java