@@ -5,7 +5,7 @@
  * 2.0.
  */
 
-package org.elasticsearch.xpack.inference.external.action.cohere;
+package org.elasticsearch.xpack.inference.external.action.voyageai;
 
 import org.apache.http.HttpHeaders;
 import org.elasticsearch.ElasticsearchException;
@@ -26,16 +26,15 @@ import org.elasticsearch.xpack.inference.external.action.ExecutableAction;
 import org.elasticsearch.xpack.inference.external.action.SenderExecutableAction;
 import org.elasticsearch.xpack.inference.external.http.HttpClientManager;
 import org.elasticsearch.xpack.inference.external.http.HttpResult;
-import org.elasticsearch.xpack.inference.external.http.sender.CohereEmbeddingsRequestManager;
 import org.elasticsearch.xpack.inference.external.http.sender.DocumentsOnlyInput;
 import org.elasticsearch.xpack.inference.external.http.sender.HttpRequestSenderTests;
 import org.elasticsearch.xpack.inference.external.http.sender.Sender;
-import org.elasticsearch.xpack.inference.external.request.cohere.CohereUtils;
+import org.elasticsearch.xpack.inference.external.http.sender.VoyageAIEmbeddingsRequestManager;
+import org.elasticsearch.xpack.inference.external.request.voyageai.VoyageAIUtils;
 import org.elasticsearch.xpack.inference.logging.ThrottlerManager;
-import org.elasticsearch.xpack.inference.services.cohere.CohereTruncation;
-import org.elasticsearch.xpack.inference.services.cohere.embeddings.CohereEmbeddingType;
-import org.elasticsearch.xpack.inference.services.cohere.embeddings.CohereEmbeddingsModelTests;
-import org.elasticsearch.xpack.inference.services.cohere.embeddings.CohereEmbeddingsTaskSettings;
+import org.elasticsearch.xpack.inference.services.voyageai.embeddings.VoyageAIEmbeddingType;
+import org.elasticsearch.xpack.inference.services.voyageai.embeddings.VoyageAIEmbeddingsModelTests;
+import org.elasticsearch.xpack.inference.services.voyageai.embeddings.VoyageAIEmbeddingsTaskSettings;
 import org.hamcrest.MatcherAssert;
 import org.junit.After;
 import org.junit.Before;
@@ -50,9 +49,9 @@ import static org.elasticsearch.xpack.inference.Utils.mockClusterServiceEmpty;
 import static org.elasticsearch.xpack.inference.external.action.ActionUtils.constructFailedToSendRequestMessage;
 import static org.elasticsearch.xpack.inference.external.http.Utils.entityAsMap;
 import static org.elasticsearch.xpack.inference.external.http.Utils.getUrl;
+import static org.elasticsearch.xpack.inference.results.TextEmbeddingResultsTests.buildExpectationBinary;
 import static org.elasticsearch.xpack.inference.results.TextEmbeddingResultsTests.buildExpectationByte;
 import static org.elasticsearch.xpack.inference.results.TextEmbeddingResultsTests.buildExpectationFloat;
-import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
@@ -61,7 +60,7 @@ import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
 
-public class CohereEmbeddingsActionTests extends ESTestCase {
+public class VoyageAIEmbeddingsActionTests extends ESTestCase {
     private static final TimeValue TIMEOUT = new TimeValue(30, TimeUnit.SECONDS);
     private final MockWebServer webServer = new MockWebServer();
     private ThreadPool threadPool;
@@ -89,27 +88,19 @@ public class CohereEmbeddingsActionTests extends ESTestCase {
 
             String responseJson = """
                 {
-                    "id": "de37399c-5df6-47cb-bc57-e3c5680c977b",
-                    "texts": [
-                        "hello"
-                    ],
-                    "embeddings": {
-                        "float": [
-                            [
+                    "object": "list",
+                    "data": [{
+                            "object": "embedding",
+                            "embedding": [
                                 0.123,
                                 -0.123
-                            ]
-                        ]
-                    },
-                    "meta": {
-                        "api_version": {
-                            "version": "1"
-                        },
-                        "billed_units": {
-                            "input_tokens": 1
-                        }
-                    },
-                    "response_type": "embeddings_by_type"
+                            ],
+                            "index": 0
+                    }],
+                    "model": "voyage-3-large",
+                    "usage": {
+                        "total_tokens": 123
+                    }
                 }
                 """;
             webServer.enqueue(new MockResponse().setResponseCode(200).setBody(responseJson));
@@ -117,9 +108,9 @@ public class CohereEmbeddingsActionTests extends ESTestCase {
             var action = createAction(
                 getUrl(webServer),
                 "secret",
-                new CohereEmbeddingsTaskSettings(InputType.INGEST, CohereTruncation.START),
+                new VoyageAIEmbeddingsTaskSettings(InputType.INGEST, true),
                 "model",
-                CohereEmbeddingType.FLOAT,
+                VoyageAIEmbeddingType.FLOAT,
                 sender
             );
 
@@ -130,32 +121,34 @@ public class CohereEmbeddingsActionTests extends ESTestCase {
 
             MatcherAssert.assertThat(result.asMap(), is(buildExpectationFloat(List.of(new float[] { 0.123F, -0.123F }))));
             MatcherAssert.assertThat(webServer.requests(), hasSize(1));
-            assertNull(webServer.requests().get(0).getUri().getQuery());
+            assertNull(webServer.requests().getFirst().getUri().getQuery());
             MatcherAssert.assertThat(
-                webServer.requests().get(0).getHeader(HttpHeaders.CONTENT_TYPE),
+                webServer.requests().getFirst().getHeader(HttpHeaders.CONTENT_TYPE),
                 equalTo(XContentType.JSON.mediaType())
             );
-            MatcherAssert.assertThat(webServer.requests().get(0).getHeader(HttpHeaders.AUTHORIZATION), equalTo("Bearer secret"));
+            MatcherAssert.assertThat(webServer.requests().getFirst().getHeader(HttpHeaders.AUTHORIZATION), equalTo("Bearer secret"));
             MatcherAssert.assertThat(
-                webServer.requests().get(0).getHeader(CohereUtils.REQUEST_SOURCE_HEADER),
-                equalTo(CohereUtils.ELASTIC_REQUEST_SOURCE)
+                webServer.requests().getFirst().getHeader(VoyageAIUtils.REQUEST_SOURCE_HEADER),
+                equalTo(VoyageAIUtils.ELASTIC_REQUEST_SOURCE)
             );
 
-            var requestMap = entityAsMap(webServer.requests().get(0).getBody());
+            var requestMap = entityAsMap(webServer.requests().getFirst().getBody());
             MatcherAssert.assertThat(
                 requestMap,
-                is(
+                equalTo(
                     Map.of(
-                        "texts",
+                        "input",
                         List.of("abc"),
                         "model",
                         "model",
                         "input_type",
-                        "search_document",
-                        "embedding_types",
-                        List.of("float"),
-                        "truncate",
-                        "start"
+                        "document",
+                        "output_dtype",
+                        "float",
+                        "truncation",
+                        true,
+                        "output_dimension",
+                        1024
                     )
                 )
             );
@@ -170,27 +163,19 @@ public class CohereEmbeddingsActionTests extends ESTestCase {
 
             String responseJson = """
                 {
-                    "id": "de37399c-5df6-47cb-bc57-e3c5680c977b",
-                    "texts": [
-                        "hello"
-                    ],
-                    "embeddings": {
-                        "int8": [
-                            [
+                    "object": "list",
+                    "data": [{
+                            "object": "embedding",
+                            "embedding": [
                                 0,
                                 -1
-                            ]
-                        ]
-                    },
-                    "meta": {
-                        "api_version": {
-                            "version": "1"
-                        },
-                        "billed_units": {
-                            "input_tokens": 1
-                        }
-                    },
-                    "response_type": "embeddings_by_type"
+                            ],
+                            "index": 0
+                    }],
+                    "model": "voyage-3-large",
+                    "usage": {
+                        "total_tokens": 123
+                    }
                 }
                 """;
             webServer.enqueue(new MockResponse().setResponseCode(200).setBody(responseJson));
@@ -198,9 +183,9 @@ public class CohereEmbeddingsActionTests extends ESTestCase {
             var action = createAction(
                 getUrl(webServer),
                 "secret",
-                new CohereEmbeddingsTaskSettings(InputType.INGEST, CohereTruncation.START),
+                new VoyageAIEmbeddingsTaskSettings(InputType.INGEST, true),
                 "model",
-                CohereEmbeddingType.INT8,
+                VoyageAIEmbeddingType.INT8,
                 sender
             );
 
@@ -211,45 +196,112 @@ public class CohereEmbeddingsActionTests extends ESTestCase {
 
             assertEquals(buildExpectationByte(List.of(new byte[] { 0, -1 })), result.asMap());
             MatcherAssert.assertThat(webServer.requests(), hasSize(1));
-            assertNull(webServer.requests().get(0).getUri().getQuery());
+            assertNull(webServer.requests().getFirst().getUri().getQuery());
             MatcherAssert.assertThat(
-                webServer.requests().get(0).getHeader(HttpHeaders.CONTENT_TYPE),
+                webServer.requests().getFirst().getHeader(HttpHeaders.CONTENT_TYPE),
                 equalTo(XContentType.JSON.mediaType())
             );
-            MatcherAssert.assertThat(webServer.requests().get(0).getHeader(HttpHeaders.AUTHORIZATION), equalTo("Bearer secret"));
+            MatcherAssert.assertThat(webServer.requests().getFirst().getHeader(HttpHeaders.AUTHORIZATION), equalTo("Bearer secret"));
             MatcherAssert.assertThat(
-                webServer.requests().get(0).getHeader(CohereUtils.REQUEST_SOURCE_HEADER),
-                equalTo(CohereUtils.ELASTIC_REQUEST_SOURCE)
+                webServer.requests().getFirst().getHeader(VoyageAIUtils.REQUEST_SOURCE_HEADER),
+                equalTo(VoyageAIUtils.ELASTIC_REQUEST_SOURCE)
             );
 
-            var requestMap = entityAsMap(webServer.requests().get(0).getBody());
+            var requestMap = entityAsMap(webServer.requests().getFirst().getBody());
             MatcherAssert.assertThat(
                 requestMap,
                 is(
                     Map.of(
-                        "texts",
+                        "input",
                         List.of("abc"),
                         "model",
                         "model",
                         "input_type",
-                        "search_document",
-                        "embedding_types",
-                        List.of("int8"),
-                        "truncate",
-                        "start"
+                        "document",
+                        "output_dtype",
+                        "int8",
+                        "truncation",
+                        true,
+                        "output_dimension",
+                        1024
                     )
                 )
             );
         }
     }
 
-    public void testExecute_ThrowsURISyntaxException_ForInvalidUrl() throws IOException {
-        try (var sender = mock(Sender.class)) {
-            var thrownException = expectThrows(
-                IllegalArgumentException.class,
-                () -> createAction("^^", "secret", CohereEmbeddingsTaskSettings.EMPTY_SETTINGS, null, null, sender)
+    public void testExecute_ReturnsSuccessfulResponse_ForBinaryResponseType() throws IOException {
+        var senderFactory = HttpRequestSenderTests.createSenderFactory(threadPool, clientManager);
+
+        try (var sender = HttpRequestSenderTests.createSender(senderFactory)) {
+            sender.start();
+
+            String responseJson = """
+                {
+                    "object": "list",
+                    "data": [{
+                            "object": "embedding",
+                            "embedding": [
+                                0,
+                                -1
+                            ],
+                            "index": 0
+                    }],
+                    "model": "voyage-3-large",
+                    "usage": {
+                        "total_tokens": 123
+                    }
+                }
+                """;
+            webServer.enqueue(new MockResponse().setResponseCode(200).setBody(responseJson));
+
+            var action = createAction(
+                getUrl(webServer),
+                "secret",
+                new VoyageAIEmbeddingsTaskSettings(InputType.INGEST, true),
+                "model",
+                VoyageAIEmbeddingType.BINARY,
+                sender
             );
-            MatcherAssert.assertThat(thrownException.getMessage(), containsString("unable to parse url [^^]"));
+
+            PlainActionFuture<InferenceServiceResults> listener = new PlainActionFuture<>();
+            action.execute(new DocumentsOnlyInput(List.of("abc")), InferenceAction.Request.DEFAULT_TIMEOUT, listener);
+
+            var result = listener.actionGet(TIMEOUT);
+
+            assertEquals(buildExpectationBinary(List.of(new byte[] { 0, -1 })), result.asMap());
+            MatcherAssert.assertThat(webServer.requests(), hasSize(1));
+            assertNull(webServer.requests().getFirst().getUri().getQuery());
+            MatcherAssert.assertThat(
+                webServer.requests().getFirst().getHeader(HttpHeaders.CONTENT_TYPE),
+                equalTo(XContentType.JSON.mediaType())
+            );
+            MatcherAssert.assertThat(webServer.requests().getFirst().getHeader(HttpHeaders.AUTHORIZATION), equalTo("Bearer secret"));
+            MatcherAssert.assertThat(
+                webServer.requests().getFirst().getHeader(VoyageAIUtils.REQUEST_SOURCE_HEADER),
+                equalTo(VoyageAIUtils.ELASTIC_REQUEST_SOURCE)
+            );
+
+            var requestMap = entityAsMap(webServer.requests().getFirst().getBody());
+            MatcherAssert.assertThat(
+                requestMap,
+                is(
+                    Map.of(
+                        "input",
+                        List.of("abc"),
+                        "model",
+                        "model",
+                        "input_type",
+                        "document",
+                        "output_dtype",
+                        "binary",
+                        "truncation",
+                        true,
+                        "output_dimension",
+                        1024
+                    )
+                )
+            );
         }
     }
 
@@ -257,7 +309,7 @@ public class CohereEmbeddingsActionTests extends ESTestCase {
         var sender = mock(Sender.class);
         doThrow(new ElasticsearchException("failed")).when(sender).send(any(), any(), any(), any());
 
-        var action = createAction(getUrl(webServer), "secret", CohereEmbeddingsTaskSettings.EMPTY_SETTINGS, null, null, sender);
+        var action = createAction(getUrl(webServer), "secret", VoyageAIEmbeddingsTaskSettings.EMPTY_SETTINGS, "model", null, sender);
 
         PlainActionFuture<InferenceServiceResults> listener = new PlainActionFuture<>();
         action.execute(new DocumentsOnlyInput(List.of("abc")), InferenceAction.Request.DEFAULT_TIMEOUT, listener);
@@ -277,14 +329,14 @@ public class CohereEmbeddingsActionTests extends ESTestCase {
             return Void.TYPE;
         }).when(sender).send(any(), any(), any(), any());
 
-        var action = createAction(getUrl(webServer), "secret", CohereEmbeddingsTaskSettings.EMPTY_SETTINGS, null, null, sender);
+        var action = createAction(getUrl(webServer), "secret", VoyageAIEmbeddingsTaskSettings.EMPTY_SETTINGS, "model", null, sender);
 
         PlainActionFuture<InferenceServiceResults> listener = new PlainActionFuture<>();
         action.execute(new DocumentsOnlyInput(List.of("abc")), InferenceAction.Request.DEFAULT_TIMEOUT, listener);
 
         var thrownException = expectThrows(ElasticsearchException.class, () -> listener.actionGet(TIMEOUT));
 
-        MatcherAssert.assertThat(thrownException.getMessage(), is("Failed to send Cohere embeddings request. Cause: failed"));
+        MatcherAssert.assertThat(thrownException.getMessage(), is("Failed to send VoyageAI embeddings request. Cause: failed"));
     }
 
     public void testExecute_ThrowsElasticsearchException_WhenSenderOnFailureIsCalled_WhenUrlIsNull() {
@@ -297,55 +349,55 @@ public class CohereEmbeddingsActionTests extends ESTestCase {
             return Void.TYPE;
         }).when(sender).send(any(), any(), any(), any());
 
-        var action = createAction(null, "secret", CohereEmbeddingsTaskSettings.EMPTY_SETTINGS, null, null, sender);
+        var action = createAction(null, "secret", VoyageAIEmbeddingsTaskSettings.EMPTY_SETTINGS, "model", null, sender);
 
         PlainActionFuture<InferenceServiceResults> listener = new PlainActionFuture<>();
         action.execute(new DocumentsOnlyInput(List.of("abc")), InferenceAction.Request.DEFAULT_TIMEOUT, listener);
 
         var thrownException = expectThrows(ElasticsearchException.class, () -> listener.actionGet(TIMEOUT));
 
-        MatcherAssert.assertThat(thrownException.getMessage(), is("Failed to send Cohere embeddings request. Cause: failed"));
+        MatcherAssert.assertThat(thrownException.getMessage(), is("Failed to send VoyageAI embeddings request. Cause: failed"));
     }
 
     public void testExecute_ThrowsException() {
         var sender = mock(Sender.class);
         doThrow(new IllegalArgumentException("failed")).when(sender).send(any(), any(), any(), any());
 
-        var action = createAction(getUrl(webServer), "secret", CohereEmbeddingsTaskSettings.EMPTY_SETTINGS, null, null, sender);
+        var action = createAction(getUrl(webServer), "secret", VoyageAIEmbeddingsTaskSettings.EMPTY_SETTINGS, "model", null, sender);
 
         PlainActionFuture<InferenceServiceResults> listener = new PlainActionFuture<>();
         action.execute(new DocumentsOnlyInput(List.of("abc")), InferenceAction.Request.DEFAULT_TIMEOUT, listener);
 
         var thrownException = expectThrows(ElasticsearchException.class, () -> listener.actionGet(TIMEOUT));
 
-        MatcherAssert.assertThat(thrownException.getMessage(), is("Failed to send Cohere embeddings request. Cause: failed"));
+        MatcherAssert.assertThat(thrownException.getMessage(), is("Failed to send VoyageAI embeddings request. Cause: failed"));
     }
 
     public void testExecute_ThrowsExceptionWithNullUrl() {
         var sender = mock(Sender.class);
         doThrow(new IllegalArgumentException("failed")).when(sender).send(any(), any(), any(), any());
 
-        var action = createAction(null, "secret", CohereEmbeddingsTaskSettings.EMPTY_SETTINGS, null, null, sender);
+        var action = createAction(null, "secret", VoyageAIEmbeddingsTaskSettings.EMPTY_SETTINGS, "model", null, sender);
 
         PlainActionFuture<InferenceServiceResults> listener = new PlainActionFuture<>();
         action.execute(new DocumentsOnlyInput(List.of("abc")), InferenceAction.Request.DEFAULT_TIMEOUT, listener);
 
         var thrownException = expectThrows(ElasticsearchException.class, () -> listener.actionGet(TIMEOUT));
 
-        MatcherAssert.assertThat(thrownException.getMessage(), is("Failed to send Cohere embeddings request. Cause: failed"));
+        MatcherAssert.assertThat(thrownException.getMessage(), is("Failed to send VoyageAI embeddings request. Cause: failed"));
     }
 
     private ExecutableAction createAction(
         String url,
         String apiKey,
-        CohereEmbeddingsTaskSettings taskSettings,
+        VoyageAIEmbeddingsTaskSettings taskSettings,
         @Nullable String modelName,
-        @Nullable CohereEmbeddingType embeddingType,
+        @Nullable VoyageAIEmbeddingType embeddingType,
         Sender sender
     ) {
-        var model = CohereEmbeddingsModelTests.createModel(url, apiKey, taskSettings, 1024, 1024, modelName, embeddingType);
-        var failedToSendRequestErrorMessage = constructFailedToSendRequestMessage("Cohere embeddings");
-        var requestCreator = CohereEmbeddingsRequestManager.of(model, threadPool);
+        var model = VoyageAIEmbeddingsModelTests.createModel(url, apiKey, taskSettings, 1024, 1024, modelName, embeddingType);
+        var failedToSendRequestErrorMessage = constructFailedToSendRequestMessage("VoyageAI embeddings");
+        var requestCreator = VoyageAIEmbeddingsRequestManager.of(model, threadPool);
         return new SenderExecutableAction(sender, requestCreator, failedToSendRequestErrorMessage);
     }
 
